--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,3 +10,6 @@ repo_url: https://github.com/axelschacher/sse-mkdocs-exercise
 edit_uri: edit/master/docs/
 
 site_author: axelschacher
+
+theme:
+  name: bootstrap4
